<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">InstaClone</string>
    <string name="login_language">한국어 (대한민국)</string>
    <string name="login_id_hint">전화번호, 이메일 주소 또는 사용자 이름</string>
    <string name="login_password_hint">비밀번호</string>
    <string name="login_login">로그인</string>
    <string name="login_info">로그인 상세 정보를 잊으셨나요?</string>
    <string name="login_search_account">로그인 도움말 보기.</string>
    <string name="login_or">또는</string>
    <string name="login_facebook_login">Facebook으로 로그인</string>
    <string name="login_signup_info">계정이 없으신가요?</string>
    <string name="login_signup">가입하기.</string>
    <string name="signup_has_account">이미 계정이 있으신가요?</string>
    <string name="signup_goto_login">로그인하기</string>
    <string name="email_email_hint">이메일</string>
    <string name="btn_next">다음</string>
    <string name="phone_phone_hint">휴대폰 번호</string>
    <string name="tab_phone">전화번호</string>
    <string name="tab_email">이메일</string>
    <string name="facebook_app_id">124883372908194</string>
    <string name="fb_login_protocol_scheme">fb124883372908194</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="et_name">성명</string>
    <string name="et_username">사용자 이름</string>
    <string name="et_password">비밀번호</string>
    <string name="terms_agree_all">모두 동의</string>
    <string name="terms_service_terms">서비스 약관(필수)</string>
    <string name="text_more">더 알아보기</string>
    <string name="terms_data_terms">데이터 정책(필수)</string>
    <string name="terms_location_terms">위치 기반 기능(필수)</string>
    <string name="terms_info">Instagram은 회원님의 개인 정보를 안전하게 보호합니다. 새 계정을 만들려면 모든 약관에 동의하세요.</string>
    <string name="terms_title">약관 동의</string>
    <string name="profile_btn_edit">프로필 편집</string>
    <string name="following_text">팔로잉</string>
    <string name="follower_text">팔로워</string>
    <string name="post_text">게시물</string>
    <string name="my_feed_empty_title">프로필</string>
    <string name="my_feed_empty_info1">사진과 동영상을 공유하면 프로필에 표시됩니다.</string>
    <string name="my_feed_empty_info2">첫 사진/동영상을 공유해보세요</string>
    <string name="my_tagged_empty_title1">회원님이 나온</string>
    <string name="my_tagged_empty_title2">사진 및 동영상</string>
    <string name="my_tagged_empty_info1">사람들이 회원님을 사진 및 동영상에 태그하면</string>
    <string name="my_tagged_empty_info2">태그된 사진 및 동영상이 여기에 표시됩니다.</string>
    <string name="settings_account_info">스토리 및 게시물 공유, 로그인 등 Instagram, Facebook 앱, Messenger 간에 연결된 환경에 대한 설정을 관리하세요.</string>
    <string name="search_hint">검색</string>

    <!--   설정 -->
    <string name="settings_title">설정</string>
    <string name="settings_invite">친구 팔로우 및 초대</string>
    <string name="settings_notification">알림</string>
    <string name="settings_public_range">공개 범위</string>
    <string name="settings_security">보안</string>
    <string name="settings_ad">광고</string>
    <string name="settings_account">계정</string>
    <string name="settings_help">도움말</string>
    <string name="settings_info">정보</string>
    <string name="settings_theme">테마</string>
    <string name="settings_account_center">계정 센터</string>
    <string name="settings_login">로그인</string>
    <string name="settings_other_login">다중 계정 로그인 설정</string>
    <string name="settings_account_change">계정 추가 또는 전환</string>
    <string name="username">username</string>
    <string name="settings_logout">계정 로그아웃</string>
    <string name="settings_all_logout">모든 계정에서 로그아웃</string>
    <string name="arrow_back">뒤로가기</string>
    <string name="facebook_logo">facebook_logo</string>
    <string name="add_box">add_box</string>
    <string name="menu">menu</string>
    <string name="ex_count">0</string>
    <string name="profile_introduce">인스타그램 프로필 소개글 쓰는 곳</string>
    <string name="profile_story_highlight">스토리 하이라이트</string>
    <string name="arrow_down">arrow_down</string>
    <string name="more">more</string>
    <string name="btn_follow">팔로우</string>
    <string name="btn_message">메시지</string>
    <string name="close">close</string>
    <string name="profile_edit_title">프로필 편집</string>
    <string name="check">check</string>
    <string name="profile_edit_change_image">프로필 사진 변경</string>
    <string name="profile_edit_name_hint">Name</string>
    <string name="profile_edit_username">사용자 이름</string>
    <string name="profile_edit_website">웹사이트</string>
    <string name="profile_edit_introduce">소개</string>
    <string name="profile_edit_change_pro_account">프로페셔널 계정으로 전환</string>
    <string name="profile_edit_private_setting">개인 정보 설정</string>
    <string name="instagram">instagram</string>
    <string name="password_eye">password_eye</string>
    <string name="signup_title">전화번호로 회원가입</string>
    <string name="signup_image">signup_image</string>
    <string name="insta_logo">insta_logo</string>
    <string name="from_facebook">from_facebook</string>
    <string name="activity">activity</string>
    <string name="direct_message">direct_message</string>
    <string name="add_circle">add_circle</string>
    <string name="my_story">내 스토리</string>
    <string name="photo_post">photo_post</string>
    <string name="no_post">게시물 없음</string>
    <string name="tag_post">tag_post</string>
    <string name="search">search</string>
    <string name="add_user">add_user</string>
    <string name="shop_title">Shop</string>
    <string name="wishlist">wishlist</string>
    <string name="shop_search_hint">Shop 검색</string>
    <string name="ex_location">서울</string>
    <string name="feed_photo">feed_photo</string>
    <string name="like">like</string>
    <string name="comment">comment</string>
    <string name="storage">storage</string>
    <string name="ex_like_count">좋아요 100개</string>
    <string name="ex_username">nike</string>
    <string name="ex_feed_text">blah blah</string>
    <string name="ex_comment_count">댓글 100개 모두 보기</string>
    <string name="ex_upload_date">11시간 전</string>
    <string name="reels_video">reels_video</string>
    <string name="reels_title">Reels</string>
    <string name="camera">camera</string>
    <string name="dot">·</string>
    <string name="follow">팔로우</string>
    <string name="reels_text">릴스에 올리는 말</string>
    <string name="sound_wave">sound_wave</string>
    <string name="reels_sound_info">원본 오디오</string>
    <string name="like_count">like_count</string>
    <string name="photos">photos</string>
    <string name="shop_item">shop_item</string>
    <string name="shop_item_company">bitda.com</string>
    <string name="shop_item_name">Satin Tote Bag Beige</string>
    <string name="history">보관</string>
    <string name="my_activity">내 활동</string>
    <string name="qrcode">QR 코드</string>
    <string name="stored">저장됨</string>
    <string name="best_friend">친한 친구</string>
    <string name="find_people">사람 찾아보기</string>
    <string name="corona_center">코로나19 정보 센터</string>
    <string name="settings">설정</string>
    <string name="igtv">IGTV</string>
    <string name="trip">여행</string>
    <string name="building">건축</string>
    <string name="accessory">장식</string>
    <string name="style">스타일</string>
    <string name="music">음악</string>
    <string name="art">예술</string>
    <string name="diy">DIY</string>
    <string name="beauty">뷰티</string>
    <string name="tv_movie">TV 및 영화</string>
    <string name="food">음식</string>
    <string name="sports">스포츠</string>
    <string name="editor_recommend">에디터 추천 보기</string>
    <string name="shop_look">Shop 둘러보기</string>
    <string name="shop_collection">Shop 컬렉션</string>
    <string name="shop_guide">가이드 둘러보기</string>
    <string name="shop_broadcast_1">방송 보며</string>
    <string name="shop_broadcast_2">쇼핑하기</string>
    <string name="shop_broadcast">shop_broadcast</string>
    <string name="name">name</string>
    <string name="reels">reels</string>
    <string name="shop">shop</string>
    <string name="profile">profile</string>
    <string name="search_hint_follower">팔로워 검색...</string>
    <string name="search_hint_following">팔로잉 검색...</string>

    <string name="doolee" tools:ignore="TypographyDashes">https://firebasestorage.googleapis.com/v0/b/softsquared-instaclone.appspot.com/o/doollee.jpg?alt=media&amp;token=5a19abc6-62dd-44f9-b2b4-7d12c30d3be5</string>
    <string name="douner" tools:ignore="TypographyDashes">https://firebasestorage.googleapis.com/v0/b/softsquared-instaclone.appspot.com/o/douner.jpg?alt=media&amp;token=55afba2e-2357-461a-acea-03f5cd4a294b</string>
    <string name="michol" tools:ignore="TypographyDashes">https://firebasestorage.googleapis.com/v0/b/softsquared-instaclone.appspot.com/o/michol.jpg?alt=media&amp;token=76437ae3-c1e9-4c05-ba19-c5fbc65718d6</string>
    <string name="gogildong" tools:ignore="TypographyDashes">https://firebasestorage.googleapis.com/v0/b/softsquared-instaclone.appspot.com/o/gogildong.jpg?alt=media&amp;token=1b1ef49f-94bb-450d-ae21-5852b53beac9</string>

</resources>