<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/login_edittext_background"
            android:paddingHorizontal="25dp"
            android:paddingVertical="10dp"
            android:text="@string/igtv"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/login_edittext_background"
            android:paddingHorizontal="25dp"
            android:paddingVertical="10dp"
            android:text="@string/trip"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/login_edittext_background"
            android:paddingHorizontal="25dp"
            android:paddingVertical="10dp"
            android:text="@string/building"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/login_edittext_background"
            android:paddingHorizontal="25dp"
            android:paddingVertical="10dp"
            android:text="@string/accessory"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/login_edittext_background"
            android:paddingHorizontal="25dp"
            android:paddingVertical="10dp"
            android:text="@string/style"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/login_edittext_background"
            android:paddingHorizontal="25dp"
            android:paddingVertical="10dp"
            android:text="@string/food"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/login_edittext_background"
            android:paddingHorizontal="25dp"
            android:paddingVertical="10dp"
            android:text="@string/art"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/login_edittext_background"
            android:paddingHorizontal="25dp"
            android:paddingVertical="10dp"
            android:text="@string/diy"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/login_edittext_background"
            android:paddingHorizontal="25dp"
            android:paddingVertical="10dp"
            android:text="@string/beauty"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/login_edittext_background"
            android:paddingHorizontal="25dp"
            android:paddingVertical="10dp"
            android:text="@string/tv_movie"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/login_edittext_background"
            android:paddingHorizontal="25dp"
            android:paddingVertical="10dp"
            android:text="@string/music"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/login_edittext_background"
            android:paddingHorizontal="25dp"
            android:paddingVertical="10dp"
            android:text="@string/sports"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </LinearLayout>
</HorizontalScrollView>
